// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaginationURLQuery /> should display the dots correctly 1`] = `
.c5 {
  font-size: 0.75rem;
  line-height: 1.33;
  line-height: revert;
  color: #32324d;
}

.c8 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  line-height: revert;
  color: #32324d;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  padding: 12px;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  outline: none;
}

.c1:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c1:focus-visible {
  outline: none;
}

.c1:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c6 {
  padding: 12px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  outline: none;
}

.c6:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c6:focus-visible {
  outline: none;
}

.c6:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c4 {
  color: #32324d;
}

.c4:hover {
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c7 {
  color: #271fe0;
  background: #ffffff;
}

.c7:hover {
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c2 {
  font-size: 0.6875rem;
}

.c2 svg path {
  fill: #666687;
}

.c2:focus svg path,
.c2:hover svg path {
  fill: #4a4a6a;
}

<nav
  aria-label="Pagination"
  class=""
>
  <ol
    class="c0"
  >
    <li>
      <a
        aria-current="page"
        aria-disabled="false"
        class="c1 c2 active"
        href="/test?page=4&pageSize=10&sort=firstname"
      >
        <div
          class="c3"
        >
          Go to previous page
        </div>
        <svg
          aria-hidden="true"
          fill="none"
          height="1rem"
          viewBox="0 0 10 16"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.88 14.12 3.773 8 9.88 1.88 8 0 0 8l8 8 1.88-1.88Z"
            fill="#32324D"
          />
        </svg>
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        class="c1 c4 active"
        href="/test?page=1&pageSize=10&sort=firstname"
      >
        <div
          class="c3"
        >
          Go to page 1
        </div>
        <span
          aria-hidden="true"
          class="c5"
        >
          1
        </span>
      </a>
    </li>
    <li>
      <div
        class=""
      >
        <div
          class="c3"
        >
          And 4 other links
        </div>
        <span
          aria-hidden="true"
          class="c5"
        >
          …
        </span>
      </div>
    </li>
    <li>
      <a
        aria-current="page"
        class="c1 c4 active"
        href="/test?page=4&pageSize=10&sort=firstname"
      >
        <div
          class="c3"
        >
          Go to page 4
        </div>
        <span
          aria-hidden="true"
          class="c5"
        >
          4
        </span>
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        class="c6 c7 active"
        href="/test?page=5&pageSize=10&sort=firstname"
      >
        <div
          class="c3"
        >
          Go to page 5
        </div>
        <span
          aria-hidden="true"
          class="c8"
        >
          5
        </span>
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        class="c1 c4 active"
        href="/test?page=6&pageSize=10&sort=firstname"
      >
        <div
          class="c3"
        >
          Go to page 6
        </div>
        <span
          aria-hidden="true"
          class="c5"
        >
          6
        </span>
      </a>
    </li>
    <li>
      <div
        class=""
      >
        <div
          class="c3"
        >
          And 8 other links
        </div>
        <span
          aria-hidden="true"
          class="c5"
        >
          …
        </span>
      </div>
    </li>
    <li>
      <a
        aria-current="page"
        class="c1 c4 active"
        href="/test?page=10&pageSize=10&sort=firstname"
      >
        <div
          class="c3"
        >
          Go to page 10
        </div>
        <span
          aria-hidden="true"
          class="c5"
        >
          10
        </span>
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        aria-disabled="false"
        class="c1 c2 active"
        href="/test?page=6&pageSize=10&sort=firstname"
      >
        <div
          class="c3"
        >
          Go to next page
        </div>
        <svg
          aria-hidden="true"
          fill="none"
          height="1rem"
          viewBox="0 0 10 16"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 1.88 6.107 8 0 14.12 1.88 16l8-8-8-8L0 1.88Z"
            fill="#32324D"
          />
        </svg>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`<PaginationURLQuery /> should work when the pageCount is inferior or equal to 4 1`] = `
.c6 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  line-height: revert;
  color: #32324d;
}

.c8 {
  font-size: 0.75rem;
  line-height: 1.33;
  line-height: revert;
  color: #32324d;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  padding: 12px;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  outline: none;
}

.c1:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c1:focus-visible {
  outline: none;
}

.c1:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c4 {
  padding: 12px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  outline: none;
}

.c4:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c4:focus-visible {
  outline: none;
}

.c4:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c5 {
  color: #271fe0;
  background: #ffffff;
}

.c5:hover {
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c7 {
  color: #32324d;
}

.c7:hover {
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c2 {
  font-size: 0.6875rem;
  pointer-events: none;
}

.c2 svg path {
  fill: #c0c0cf;
}

.c2:focus svg path,
.c2:hover svg path {
  fill: #c0c0cf;
}

.c9 {
  font-size: 0.6875rem;
}

.c9 svg path {
  fill: #666687;
}

.c9:focus svg path,
.c9:hover svg path {
  fill: #4a4a6a;
}

<nav
  aria-label="Pagination"
  class=""
>
  <ol
    class="c0"
  >
    <li>
      <a
        aria-current="page"
        aria-disabled="true"
        class="c1 c2 active"
        href="/test"
        tabindex="-1"
      >
        <div
          class="c3"
        >
          Go to previous page
        </div>
        <svg
          aria-hidden="true"
          fill="none"
          height="1rem"
          viewBox="0 0 10 16"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.88 14.12 3.773 8 9.88 1.88 8 0 0 8l8 8 1.88-1.88Z"
            fill="#32324D"
          />
        </svg>
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        class="c4 c5 active"
        href="/test?page=1&pageSize=10&sort=firstname"
      >
        <div
          class="c3"
        >
          Go to page 1
        </div>
        <span
          aria-hidden="true"
          class="c6"
        >
          1
        </span>
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        class="c1 c7 active"
        href="/test?page=2&pageSize=10&sort=firstname"
      >
        <div
          class="c3"
        >
          Go to page 2
        </div>
        <span
          aria-hidden="true"
          class="c8"
        >
          2
        </span>
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        class="c1 c7 active"
        href="/test?page=3&pageSize=10&sort=firstname"
      >
        <div
          class="c3"
        >
          Go to page 3
        </div>
        <span
          aria-hidden="true"
          class="c8"
        >
          3
        </span>
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        class="c1 c7 active"
        href="/test?page=4&pageSize=10&sort=firstname"
      >
        <div
          class="c3"
        >
          Go to page 4
        </div>
        <span
          aria-hidden="true"
          class="c8"
        >
          4
        </span>
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        aria-disabled="false"
        class="c1 c9 active"
        href="/test?page=2&pageSize=10&sort=firstname"
      >
        <div
          class="c3"
        >
          Go to next page
        </div>
        <svg
          aria-hidden="true"
          fill="none"
          height="1rem"
          viewBox="0 0 10 16"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 1.88 6.107 8 0 14.12 1.88 16l8-8-8-8L0 1.88Z"
            fill="#32324D"
          />
        </svg>
      </a>
    </li>
  </ol>
</nav>
`;
